fixed bug with contact section on screen resize

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -350,6 +350,10 @@ h1 {
     display: flex;
     flex-wrap: wrap;
   }
+.contact-outter-div.tops{
+  position: relative !important;
+}
+
   .tops{
     position: relative;
     width: 100%;
