added email and phone to contact section

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -236,10 +236,14 @@ h1 {
 .contact-left-content>h1 {
   color: black;
 }
+.contact-phone-email{
+  margin-top: 1rem;
+  margin-bottom: 0;
+}
 
 .apps {
   background-image: linear-gradient(to bottom, rgba(230, 230, 230, 0), rgba(230, 230, 230, 0)),
-  url(../images/nextflick.png);
+  url(../images/nextflick.PNG);
   background-size: contain;
   background-size: 80% 80%;
   padding: 30% 5%;
@@ -249,12 +253,12 @@ h1 {
 
 .apps-fire {
   background-image: linear-gradient(to bottom, rgba(230, 230, 230, 0), rgba(230, 230, 230, 0)),
-  url(../images/firewall.png);
+  url(../images/firewall.PNG);
 }
 
 .apps-trivia {
   background-image: linear-gradient(to bottom, rgba(230, 230, 230, 0), rgba(230, 230, 230, 0)),
-  url(../images/trivia.png);
+  url(../images/trivia.PNG);
 }
 
 .app-title {
