updated media queries

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -354,6 +354,9 @@ h1 {
     display: flex;
     flex-wrap: wrap;
   }
+  .work-outter-div.tops{
+    position: relative !important;
+  }
 .contact-outter-div.tops{
   position: relative !important;
 }
