--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,9 +1,11 @@
 button:hover {
-cursor: pointer;
+  cursor: pointer;
 }
-a{
-  color:inherit;
+
+a {
+  color: inherit;
 }
+
 .top-section {
   height: 100vh;
   background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.9), rgba(215, 215, 215, 0.7), rgba(0, 0, 0, 0.9)),
@@ -42,12 +44,13 @@ h1 {
 }
 
 .nav-item {
-  color:#8484b3;
+  color: #8484b3;
   padding: 0 10px;
   font-size: 26px;
 }
-.about-item{
-  color:black;
+
+.about-item {
+  color: black;
 }
 
 .nav {
@@ -69,6 +72,7 @@ h1 {
 
 
 
+
 /* The typing effect */
 
 @keyframes typing {
@@ -80,15 +84,17 @@ h1 {
   }
 }
 
-/**/
-
 
 /**/
 
 
 /**/
-.fullpage-section{
-	min-height: 662px;
+
+
+/**/
+
+.fullpage-section {
+  min-height: 662px;
   position: relative;
 }
 
@@ -116,8 +122,9 @@ h1 {
   background-repeat: no-repeat;
   background-size: cover;
 }
-.about-left-content > .nav-items{
-  color:black;
+
+.about-left-content>.nav-items {
+  color: black;
 }
 
 .about-right-wrapper {
@@ -139,6 +146,7 @@ h1 {
 .header-p {
   font-weight: bold;
 }
+
 
 /**/
 
@@ -183,13 +191,16 @@ h1 {
 .work-left-content>h1 {
   color: white;
 }
-/**/
 
 
 /**/
 
 
 /**/
+
+
+/**/
+
 .contact-section {
   background: white;
 }
@@ -212,7 +223,7 @@ h1 {
   background: #f1efef;
   width: 50%;
   left: 50%;
-  background-image: linear-gradient(to right, rgba(255,255, 255, 0.5),rgba(0, 0, 0, 0.1), rgba(255, 255, 255, 0.5)),
+  background-image: linear-gradient(to right, rgba(255, 255, 255, 0.5), rgba(0, 0, 0, 0.1), rgba(255, 255, 255, 0.5)),
   url(../images/contact.jpg);
   background-size: 100% 100%;
   background-position: center;
@@ -226,17 +237,21 @@ h1 {
   justify-content: center;
   height: 662px;
 }
-.contact-info{
+
+.contact-info {
   width: 100%;
   text-align: center;
 }
-.contact-info > .contact-header{
-  font-size:30px;
+
+.contact-info>.contact-header {
+  font-size: 30px;
 }
+
 .contact-left-content>h1 {
   color: black;
 }
-.contact-phone-email{
+
+.contact-phone-email {
   margin-top: 1rem;
   margin-bottom: 0;
 }
@@ -267,6 +282,7 @@ h1 {
   color: black;
   opacity: 0.1;
 }
+
 
 
 
@@ -312,84 +328,98 @@ h1 {
   transform: scale(1.25);
 }
 
+
 /*modal container*/
-.modal-style{
-	width: 100%;
+
+.modal-style {
+  width: 100%;
   height: 100vh;
   text-align: center;
   margin: 0 auto;
   border-radius: 1%;
-  background-image: linear-gradient(to right, rgba(0, 0,0 , 1), rgba(220, 220, 220, 0.3), rgba(0, 0, 0, 1));
+  background-image: linear-gradient(to right, rgba(0, 0, 0, 1), rgba(220, 220, 220, 0.3), rgba(0, 0, 0, 1));
+}
 
+.modal-body {
+  top: 12%;
+  padding: 0 27%;
 }
-.modal-body{
-	top: 12%;
-	padding:0 27%;
+
+.modal-title {
+  font-size: 45px;
+  color: #8cff8c;
 }
-.modal-title{
-	font-size: 45px;
-	color: #8cff8c;
+
+.modal-description {
+  color: white;
 }
-.modal-description{
-	color:white;
+
+.modal-github,
+.modal-app {
+  font-weight: bold;
+  color: white;
+  font-size: 25px;
 }
-.modal-github,.modal-app{
-	font-weight: bold;
-	color:white;
-	font-size: 25px;
+
+.fa {
+  font-size: 50px;
+  padding: 0 5px;
+  cursor: pointer;
 }
-.fa{
- font-size: 50px;
- padding:0 5px;
- cursor: pointer;
+
+#close-modal {
+  background: #8cff8c;
 }
-#close-modal{
-	background: #8cff8c;
-}
+
 
 /*media queries*/
 
-@media (max-width: 1050px){
+@media (max-width: 1050px) {
   .fullpage-section {
     display: flex;
     flex-wrap: wrap;
   }
-  .work-outter-div.tops{
+  .work-outter-div.tops {
     position: relative !important;
   }
-.contact-outter-div.tops{
-  position: relative !important;
-}
+  .contact-outter-div.tops {
+    position: relative !important;
+  }
+  .about-outter-div.tops {
+    position: relative !important;
+  }
 
-  .tops{
+  .tops {
     position: relative;
     width: 100%;
   }
-  .left-wrappers{
+  .left-wrappers {
     width: 100%;
   }
-  .right-wrappers{
+  .right-wrappers {
     width: 100%;
     left: 0;
   }
-  .left-content{
+  .left-content {
     background-position: center;
   }
 }
-@media (max-width: 620px){
+
+@media (max-width: 620px) {
   .paragraph {
     padding-left: 20px;
     padding-right: 20px;
   }
-  .modal-body{
-    padding:0 15%;
+  .modal-body {
+    padding: 0 15%;
   }
 }
-@media (max-width:340px){
-  .nav-item{
-    padding:0 5px;
+
+@media (max-width:340px) {
+  .nav-item {
+    padding: 0 5px;
   }
-  .app-title{
+  .app-title {
     font-size: 27px;
   }
 }
