--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -266,12 +266,14 @@ h1 {
   padding: 30% 5%;
   background-repeat: no-repeat;
   background-position: center;
+  transition: all 0.5s ease;
 }
 
 .apps-fire {
   background-image: linear-gradient(to bottom, rgba(230, 230, 230, 0), rgba(230, 230, 230, 0)),
   url(../images/firewall.png);
 }
+
 
 .apps-trivia {
   background-image: linear-gradient(to bottom, rgba(230, 230, 230, 0), rgba(230, 230, 230, 0)),
@@ -280,6 +282,10 @@ h1 {
 .apps-guess{
   background-image: linear-gradient(to bottom, rgba(230, 230, 230, 0), rgba(230, 230, 230, 0)),
   url(../images/guessWho.png);
+}
+.apps-marvel{
+  background-image: linear-gradient(to bottom, rgba(230, 230, 230, 0), rgba(230, 230, 230, 0)),
+  url(../images/marvel.png);
 }
 
 .app-title {
@@ -327,11 +333,11 @@ h1 {
 }
 
 .app-title:hover {
-  -webkit-transform: scale(1.25);
-  -moz-transform: scale(1.25);
-  -ms-transform: scale(1.25);
-  -o-transform: scale(1.25);
-  transform: scale(1.25);
+  -webkit-transform: scale(1.1);
+  -moz-transform: scale(1.1);
+  -ms-transform: scale(1.1);
+  -o-transform: scale(1.1);
+  transform: scale(1.1);
 }
 
 
@@ -428,8 +434,20 @@ h1 {
   .nav-item {
     padding: 0 5px;
   }
+  .modal-title{
+    font-size: 37px;
+  }
   .app-title {
     font-size: 27px;
   }
+  .app-title:hover{
+    transform:scale(1);
+  }
+  .contact-info>.contact-header {
+    font-size: 25px;
+}
+.nav{
+  display: none;
+}
   
 }
